// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Small checkGrammar=false 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small checkGrammar=true 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small checkHighlight=false 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small checkHighlight=true 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small checkSpaces=false 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small checkSpaces=true 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small className="my-classname" 1`] = `
<small
  className="uu5-bricks-small my-classname"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small className="test-classname" 1`] = `
<small
  className="uu5-bricks-small test-classname"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small content="This is Content from ContentMixin" 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
>
  This is Content from ContentMixin
</small>
`;

exports[`UU5.Bricks.Small content=12345 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
>
  12345
</small>
`;

exports[`UU5.Bricks.Small controlled=false 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small controlled=true 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small default props 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small disabled=false 1`] = `
<small
  className="uu5-bricks-small"
  disabled={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small disabled=false 3`] = `
<small
  className="uu5-bricks-small"
  disabled={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small disabled=true 1`] = `
<small
  className="uu5-bricks-small"
  disabled={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small disabled=true 3`] = `
<small
  className="uu5-bricks-small"
  disabled={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small docKit examples UU5.Bricks.Small should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <P
    content="This is main text with normal size"
    id="uuID2"
    key="uuID2"
  />
   
  <P
    id="uuID3"
    key="uuID3"
  >
    <Small
      id="uuID4"
    >
      This is smaller text
    </Small>
  </P>
</div>
`;

exports[`UU5.Bricks.Small dynamic=false 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small dynamic=true 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small fullTextSearchPriority=0 1`] = `
<small
  className="uu5-bricks-small uu-fulltextsearch-0"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small hidden=false 1`] = `
<small
  className="uu5-bricks-small"
  hidden={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small hidden=false 3`] = `
<small
  className="uu5-bricks-small"
  hidden={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small hidden=true 1`] = `
<small
  className="uu5-bricks-small"
  hidden={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small hidden=true 3`] = `
<small
  className="uu5-bricks-small"
  hidden={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small id="myId" 1`] = `
<small
  className="uu5-bricks-small"
  id="myId"
/>
`;

exports[`UU5.Bricks.Small id="test-id" 1`] = `
<small
  className="uu5-bricks-small"
  id="test-id"
/>
`;

exports[`UU5.Bricks.Small ignoreHTML=false 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small ignoreHTML=true 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small mainAttrs=undefined 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small name="myName" 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small nestingLevel="box" 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small nestingLevel="inline" 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small noIndex=false 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small noIndex=true 1`] = `
<small
  className="uu5-bricks-small uu-fulltextsearch-0 uu5-noindex"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small noPrint=false 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small noPrint=true 1`] = `
<small
  className="uu5-bricks-small uug-1ak6bum"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small selected=false 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small selected=true 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small style="padding:8px; borderRadius: 2px" 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
/>
`;

exports[`UU5.Bricks.Small style={"backgroundColor":"red","color":"blue"} 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Bricks.Small style={"margin":8} 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
/>
`;

exports[`UU5.Bricks.Small textCorrector=false 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small textCorrector=true 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Small tooltip="My Tooltip" 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
/>
`;
